WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112259
[BlackBerry] Touch Hold selection does not scroll text area or other subframe until selection reaches bottom of the page
https://bugs.webkit.org/show_bug.cgi?id=112259
Summary
[BlackBerry] Touch Hold selection does not scroll text area or other subframe...
Iris Wu
Reported
2013-03-13 07:57:35 PDT
While selecting in a subframe, we have to check that the selection reaches the bottom of the current subframe instead of the page.
Attachments
Patch
(8.98 KB, patch)
2013-03-13 08:14 PDT
,
Iris Wu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Iris Wu
Comment 1
2013-03-13 08:14:47 PDT
Created
attachment 192925
[details]
Patch
Rob Buis
Comment 2
2013-03-13 08:25:21 PDT
Comment on
attachment 192925
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-03-13 08:36:48 PDT
Comment on
attachment 192925
[details]
Patch Clearing flags on attachment: 192925 Committed
r145720
: <
http://trac.webkit.org/changeset/145720
>
WebKit Review Bot
Comment 4
2013-03-13 08:36:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug