[BlackBerry] Touch Hold selection does not scroll text area or other subframe until selection reaches bottom of the page. https://bugs.webkit.org/show_bug.cgi?id=112259

Patch by Iris Wu <shuwu@blackberry.com> on 2013-03-13
Reviewed by Rob Buis.

PR 267394

While selecting in a subframe, check that the selection reaches
the bottom of the current subframe instead of the page.

Internally Reviewed by Genevieve Mak.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::updateSelectionScrollView):
* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectAtPoint):
(BlackBerry::WebKit::SelectionHandler::ensureSelectedTextVisible):
(BlackBerry::WebKit::SelectionHandler::selectionViewportRect):
(WebKit):
(BlackBerry::WebKit::SelectionHandler::expandSelectionToGranularity):
* WebKitSupport/SelectionHandler.h:
(BlackBerry::WebKit::SelectionHandler::setSelectionViewportRect):
(SelectionHandler):

Canonical link: https://commits.webkit.org/130574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145720 268f45cc-cd09-0410-ab3c-d52691b4dbfc