Source/WebKit/blackberry/Api/InRegionScroller.cpp
@@ -299,7 +299,10 @@ void InRegionScrollerPrivate::updateSelectionScrollView(const Node* node)
 {
     // TODO: don't notify the client if the node didn't change.
     // Deleting the scrollview is handled by the client.
-    m_webPage->m_client->notifySelectionScrollView(firstScrollableInRegionForNode(node));
+    Platform::ScrollViewBase* selectionScrollView = firstScrollableInRegionForNode(node);
+    m_webPage->m_client->notifySelectionScrollView(selectionScrollView);
+    // if there's no subframe set an empty rect so that we default to the main frame.
+    m_webPage->m_selectionHandler->setSelectionViewportRect(selectionScrollView ? WebCore::IntRect(selectionScrollView->documentViewportRect()) : WebCore::IntRect());
 }
 
 Platform::ScrollViewBase* InRegionScrollerPrivate::firstScrollableInRegionForNode(const Node* node)
